<resources>
    <string name="app_name">Exotica</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_your_paradise">Welcome to Your Paradise</string>
    <string name="find_activity">Find Activity</string>
    <string name="book_hotel">Book Hotel</string>
    <string name="main_menu_background_image">Main Menu Background Image</string>
    <string name="activity_image">Activity Image</string>
    <string name="location">Location</string>
    <string name="contact_information">Contact Information</string>
    <string name="description">Description</string>
    <string name="book">Book</string>
    <string name="title_activity_ho">Ho</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="turtle_watching">Turtle Watching</string>
    <string name="date">date</string>
    <string name="phone">phone</string>
    <string name="rating">rating</string>
    <string name="desc">Desc</string>
    <string name="price">price</string>
    <string name="turtle_watchingg"><![CDATA[Turtle_Watching>]]></string>
    <string name="turtle_watching1">Turtle Watching</string>
    <string name="activities">Activities</string>
</resources>