<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/ivactivityImageName"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/turtle" />

    <TextView
        android:id="@+id/tvactivityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivactivityImageName"
        android:text="@string/turtle_watching"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingLeft="5dp"

        />


    <TextView
        android:id="@+id/activityLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivactivityImageName"
        android:layout_below="@id/tvactivityName"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/activityDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivactivityImageName"
        android:layout_below="@id/activityLocation"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tvactivityPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivactivityImageName"
        android:layout_below="@id/activityDate"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        />


    <TextView
        android:id="@+id/tvactivityDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivactivityImageName"
        android:layout_below="@id/tvactivityPrice"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/activityRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivactivityImageName"
        android:layout_below="@id/tvactivityDesc"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tvactivityContactPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivactivityImageName"
        android:layout_below="@id/activityRating"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/activityContactEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/ivactivityImageName"
        android:layout_below="@id/tvactivityContactPhone"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        />















</RelativeLayout>