<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    Background Image    -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_menu_background_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_background2" />

    <!-- Welcome Screen Title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginTop="71dp"
        android:fontFamily="@font/oleo_script_swash_caps"
        android:text="@string/welcome_to_your_paradise"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <!-- Booking Buttons -->
    <Button
        android:id="@+id/btn_welcome_1"
        android:layout_width="218dp"
        android:layout_height="72dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="363dp"
        android:backgroundTint="@color/cyan"
        android:text="@string/book_hotel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
       <!-- app:onClick="btn_bookHotel" -->


    <Button
        android:id="@+id/btn_welcome_2"
        android:layout_width="219dp"
        android:layout_height="68dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/cyan"
        android:text="@string/find_activity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_welcome_1" />
    <!-- app:onClick="btn_findActivity" -->


</androidx.constraintlayout.widget.ConstraintLayout>